Upgraded to Spring Boot 3.2.1 Added Guava to pom.xml Code cleanup